# rpg_chat_sandbox

./: Cargo.toml  README.md
assets/: map.json  sandbox.tiled-session  tileset.json
src/: game.rs  lib.rs  main.rs
src/actor/: npc.rs  player.rs
src/npc/: agent.rs  characters.rs  mod.rs  tools.rs
src/npc/characters/: blacksmith.rs  mod.rs
