[package]
name = "rpg_chat_sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = { version = "0.4.14", features = ["audio"] }
macroquad_tiled_clone = { git = "https://github.com/B3Z0/macroquad_tiled_clone" }
serde_json = "1.0"
rig-core = "0.31.0"
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
